--- a/mysql/mysql.env
+++ b/mysql/mysql.env
@@ -1,3 +1,3 @@
-MYSQL_ROOT_PASSWORD=00CF;629>FDAa^1a
-MYSQL_USER=nnjeim
-MYSQL_PASSWORD=00CF;629>FDAa^1a
+MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+MYSQL_USER=${MYSQL_USER}
+MYSQL_PASSWORD=${MYSQL_PASSWORD}
