--- a/phpMyAdmin/phpMyAdmin.env
+++ b/phpMyAdmin/phpMyAdmin.env
@@ -1,4 +1,4 @@
-PMA_HOST=mysql
-MYSQL_ROOT_PASSWORD=00CF;629>FDAa^1a
-MYSQL_USER=nnjeim
-MYSQL_PASSWORD=00CF;629>FDAa^1a
+PMA_HOST=${PMA_HOST}
+MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+MYSQL_USER=${MYSQL_USER}
+MYSQL_PASSWORD=${MYSQL_PASSWORD}
