--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,15 @@ services:
     image: nginx
     container_name: nginx-${TAG}
     build:
-      context: ./nginx
+      context: ./docker/nginx
       dockerfile: nginx.dockerfile
     platform: linux/arm64/v8
     restart: always
     networks:
       - my-network
     volumes:
-      - ./nginx/log:/var/log/nginx
-      - ./app:/var/www/html
+      - ./docker/nginx/log:/var/log/nginx
+      - $SRC:/var/www/html
     ports:
       - "${NGINX_HTTP_PORT}:80"
       - "${NGINX_HTTPS_PORT}:443"
@@ -29,7 +29,7 @@ services:
     image: phpfpm
     container_name: phpfpm-${TAG}
     build:
-      context: ./phpfpm
+      context: ./docker/phpfpm
       dockerfile: phpfpm.dockerfile
       args:
         PHP_TAG: ${PHP_TAG}
@@ -39,7 +39,7 @@ services:
     networks:
       - my-network
     volumes:
-      - ./app:/var/www/html
+      - $SRC:/var/www/html
     ports:
       - "${PHP_FPM_PORT}:9000"
     depends_on:
@@ -52,18 +52,18 @@ services:
     image: mysql
     container_name: mysql-${TAG}
     build:
-      context: ./mysql
+      context: ./docker/mysql
       dockerfile: mysql.dockerfile
     platform: linux/arm64/v8
     restart: always
     networks:
       - my-network
     env_file:
-      - ./mysql/mysql.env
+      - ./docker/mysql/mysql.env
     ports:
       - "${MYSQL_PORT}:3306"
     volumes:
-      - ./mysql/data:/var/lib/mysql
+      - ./docker/mysql/data:/var/lib/mysql
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-p${MYSQL_ROOT_PASSWORD}"]
       timeout: 20s
@@ -73,14 +73,14 @@ services:
     image: redis
     container_name: redis-${TAG}
     build:
-      context: ./redis
+      context: ./docker/redis
       dockerfile: redis.dockerfile
     platform: linux/arm64/v8
     restart: always
     ports:
       - "${REDIS_PORT}:6379"
     volumes:
-      - ./redis/data:/data
+      - ./docker/redis/data:/data
     networks:
       - my-network
     healthcheck:
@@ -93,7 +93,7 @@ services:
     image: phpmyadmin
     container_name: phpmyadmin-${TAG}
     build:
-      context: ./phpMyAdmin
+      context: ./docker/phpMyAdmin
       dockerfile: phpMyAdmin.dockerfile
     platform: linux/arm64/v8
     restart: always
@@ -102,7 +102,7 @@ services:
     ports:
       - "${PHPMYADMIN_HTTP_PORT}:80"
     env_file:
-      - ./phpMyAdmin/phpMyAdmin.env
+      - ./docker/phpMyAdmin/phpMyAdmin.env
     links:
       - mysql:mysql
 # Define networks
