Additions to .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
-TAG=0.05
+TAG=0.0.6
 SRC=./app
+
+PLATFORM=linux/arm64/v8
+#linux/arm64/v8 for mac M1 processors
+#linux/amd64 AWS light sails
 
 # nginx
 NGINX_HTTP_PORT=80
@@ -7,12 +11,13 @@ NGINX_HTTPS_PORT=443
 
 # phpfpm env
 PHP_TAG=7.4
+TZ=Europe/Bucharest
 PHP_FPM_PORT=9000
 
 # mysql env
-MYSQL_ROOT_PASSWORD=theRootPassword
-MYSQL_USER=userName
-MYSQL_PASSWORD=theRootPassword
+MYSQL_ROOT_PASSWORD=rootPassword
+MYSQL_USER=user
+MYSQL_PASSWORD=userPassword
 MYSQL_PORT=3306
 
 # phpmyadmin env
