.local.test wildcard certificates

--- a/docker/nginx/conf.d/phpmyadmin.conf
+++ b/docker/nginx/conf.d/phpmyadmin.conf
@@ -6,7 +6,7 @@ server {
     	rewrite ^ https://$host$request_uri permanent;
     }
 
-    server_name phpmyadmin.test;
+    server_name phpmyadmin.local.test;
 
     ssl_certificate /etc/ssl/certs/_wildcard.pem;
     ssl_certificate_key /etc/ssl/private/_wildcard-key.pem;
