modified docker file

--- a/docker/web/php/overrides.ini
+++ b/docker/web/php/overrides.ini
@@ -9,5 +9,28 @@ apc.shm_size = 64M
 apc.ttl = 7200
 apc.enable_cli = 1
 
+[opcache]
+opcache.enable=1
+opcache.enable_cli=1
+opcache.jit_buffer_size=0
+opcache.jit=tracing
+opcache.memory_consumption=512
+opcache.interned_strings_buffer=64
+opcache.max_accelerated_files=32531
+opcache.validate_timestamps=60
+opcache.revalidate_freq=200
+opcache.save_comments=1
+opcache.blacklist_filename=/etc/php.d/opcache*.blacklist
+opcache.huge_code_pages=0
+
 [xdebug]
-xdebug.mode = debug, coverage
+xdebug.mode=debug
+xdebug.client_port=9003
+xdebug.client_host=10.28.10.100
+xdebub.log="/tmp/xdebug.log"
+xdebug.start_with_request=yes
+xdebug.remote_autostart=1
+xdebug.default_enable=1
+xdebug.remote_connect_back=1
+xdebug.remote_enable=1
+xdebug.idekey=PHPSTORM
