--- a/.env.example
+++ b/.env.example
@@ -6,13 +6,15 @@ PLATFORM=linux/arm64/v8
 #linux/amd64 AWS light sails
 
 # nginx
-NGINX_HTTP_PORT=80
-NGINX_HTTPS_PORT=443
+WEB_HTTP_PORT=80
+WEB_HTTPS_PORT=443
 
 # phpfpm env
 PHP_TAG=7.4
 TZ=UTC
 PHP_FPM_PORT=9000
+OPCACHE=1
+XDEBUG=0
 
 # mysql env
 MYSQL_ROOT_PASSWORD=rootPassword
