--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
     build:
       context: ./docker/web
       dockerfile: web.dockerfile
+      args:
+        OPCACHE: ${OPCACHE}
+        XDEBUG: ${XDEBUG}
     platform: ${PLATFORM}
     restart: always
     networks:
