--- a/docker/web/nginx/conf.d/phpmyadmin.conf
+++ b/docker/web/nginx/conf.d/phpmyadmin.conf
@@ -8,18 +8,13 @@ server {
 
     server_name phpmyadmin.local.test;
 
-    ssl_certificate /etc/ssl/certs/_wildcard.pem;
-    ssl_certificate_key /etc/ssl/private/_wildcard-key.pem;
+    # SSL
+    include partials/ssl.conf;
 
-    access_log /var/log/nginx/$host;
-
+    # Proxy
     location / {
-            proxy_pass https://localhost:3010/;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Host $host;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto https;
-            proxy_redirect off;
+        proxy_pass https://localhost:3010/;
+        include partials/proxy_ssl.conf;
     }
 
     error_page 502 /50x.html;
