--- a/docker/web/php/overrides.ini
+++ b/docker/web/php/overrides.ini
@@ -1,6 +1,9 @@
 [PHP]
-post_max_size = 100M
-upload_max_filesize = 100M
+post_max_size = 4G
+upload_max_filesize = 4G
+memory_limit = 2048M
+max_execution_time = 3600
+max_input_time = 3600
 variables_order = EGPCS
 
 [apcu]
@@ -18,7 +21,7 @@ opcache.memory_consumption=512
 opcache.interned_strings_buffer=64
 opcache.max_accelerated_files=32531
 opcache.validate_timestamps=60
-opcache.revalidate_freq=200
+opcache.revalidate_freq=0
 opcache.save_comments=1
 opcache.blacklist_filename=/etc/php.d/opcache*.blacklist
 opcache.huge_code_pages=0
